--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     <li><a href="http://www.slideshare.net/tokumine/presentations" target="_blank">slides 1</a></li>
     <li><a href="https://speakerdeck.com/u/tokumine" target="_blank">slides 2</a></li>
     <li><a href="http://tokumine.wordpress.com" target="_blank">archive</a></li>
+    <li><a href="mailto:si@tinypla.net" target="_blank">contact</a></li>
   </ul>  
 </div>    
 <div class="fun">
