--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,19 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/tokumine.css">
     <script src="js/canvas/vector2.js" type="text/javascript"></script>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-227565-7']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 </head>
 <body>
 <div class="card">
@@ -35,6 +48,7 @@
          // ontouch events
          // mousemove disturb
          // no highlight of text on click
+         // halo effect toggle
   
          var canvas = document.createElement('canvas');
          var ctx    = canvas.getContext('2d');
@@ -194,7 +208,5 @@
  <p>asdfasdfsadf</p>
 </div>   
 -->
-
-<!-- google analytics -->
 </body>
 </html>
