--- a/css/tokumine.css
+++ b/css/tokumine.css
@@ -47,3 +47,14 @@ ul{
   font-size:1em;
   color:#666;
 }
+
+#sorry{
+  padding:50px;
+}
+#sorry p{
+  color:#bbb; 
+  font-family: 'Droid Sans', sans-serif;
+  font-weight:400;
+  font-size:1.4em;
+  line-height:2em;  
+}
