--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Simon Tokumine</title>
+    <meta name="description" content="Learn more about Simon here" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/tokumine.css">
@@ -49,6 +50,7 @@
          // mousemove disturb
          // no highlight of text on click
          // halo effect toggle
+         // benchmark optimise
   
          var canvas = document.createElement('canvas');
          var ctx    = canvas.getContext('2d');
