--- a/css/tokumine.css
+++ b/css/tokumine.css
@@ -45,7 +45,8 @@ ul{
   font-family: 'Droid Sans', sans-serif;
   font-weight:400;
   font-size:1em;
-  color:#666;
+  color:#bbb;
+  text-shadow: #000 0px 0px 5px;
 }
 
 #sorry{
