--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <script src="js/canvas/vector2.js" type="text/javascript"></script>
     <script src="js/canvas/mouse.js" type="text/javascript"></script>
     <script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/lib/stats.js"></script>
+    <script src="js/lib/stats.js" type="text/javascript"></script>
 
     <script type="text/javascript">
 
