--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
         <li><a href="http://www.github.com/tokumine" target="_blank">github</a></li>
         <li><a href="http://uk.linkedin.com/in/tokumine" target="_blank">Linkedin</a></li>
         <li><a href="https://plus.google.com/108496261671316648522/posts" target="_blank">Google+</a></li>
+        <li><a href="http://instagram.com/tokumin" target="_blank">Instagram</a></li>
         <li><a href="http://www.jrpass.com" target="_blank">work 1</a></li>
         <li><a href="http://www.vizzuality.com" target="_blank">work 2</a></li>
         <li><a href="https://speakerdeck.com/u/tokumine" target="_blank">slides 1</a></li>
