fix for new API

--- a/_layouts/default_boid.html
+++ b/_layouts/default_boid.html
@@ -61,8 +61,9 @@
 
   // clear screen and draw mouse
   function loop(){
-      ctx.fillStyle="rgba(0,0,0,1)";
-      ctx.fillRect(0,0,canvas.width, canvas.height);
+      ctx.width=ctx.width;
+      // ctx.fillStyle="rgba(0,0,0,1)";
+      // ctx.fillRect(0,0,canvas.width, canvas.height);
 
       // ctx.clearRect(0,0,canvas.width, canvas.height);
       mouse.draw(ctx);
